--- a/.github/workflows/run-scrape.yaml
+++ b/.github/workflows/run-scrape.yaml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: "3.11"
 
     - name: Install Poetry
       run: |
@@ -30,9 +30,10 @@ jobs:
       run: poetry run python -m scps.scraper
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: generated-files
-        path: |
+        name: state_cancer_profiles_data
+        path: 
           state_cancer_profiles_incidence.csv.gz
           state_cancer_profiles_mortality.csv.gz
+          select_options.json
