ignore data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 __pycache__
 state_cancer_profiles_death.csv.gz
 select_options.json
+state_cancer_profiles_incidence.csv.gz
+state_cancer_profiles_incidence.csv
+state_cancer_profiles_select_options.json
