update workflow for release creation

--- a/.github/workflows/run-scrape.yaml
+++ b/.github/workflows/run-scrape.yaml
@@ -2,8 +2,8 @@ name: Run scrape
 
 on:
   schedule: 
-  - cron: '0 0 1 * *'
-  workflow_dispatch: true
+    - cron: '0 0 1 * *'
+  workflow_dispatch:
 
 jobs:
   build:
