--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ state_cancer_profiles_incidence.csv.gz
 state_cancer_profiles_incidence.csv
 state_cancer_profiles_select_options.json
 state_cancer_profiles_mortality.csv.gz
+.DS_Store
