--- a/.github/workflows/run-scrape.yaml
+++ b/.github/workflows/run-scrape.yaml
@@ -49,6 +49,7 @@ jobs:
       uses: softprops/action-gh-release@v2
 
       with:
+        tag_name: ${{ steps.date.outputs.date }}
         name: release-${{ steps.date.outputs.date }}
         body_path: release_note.txt
         files: |
