--- a/.github/workflows/run-scrape.yaml
+++ b/.github/workflows/run-scrape.yaml
@@ -1,6 +1,9 @@
 name: Create data release
 
 on:
+  schedule:
+    - cron: '0 0 1 * *' # Runs at 00:00 UTC on the 1st day of every month
+
   workflow_dispatch:
   # run on a tag with a push only
   push:
