--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: uv sync --frozen --extra dev
+        run: uv sync --extra dev
 
       - name: Run tests with coverage
         run: uv run pytest --cov=scps --cov-report=xml --cov-report=term-missing
